# portage-release-watch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github-topics.txt
examples/: release-watch.json
hooks/cron.daily/: portage-release-watch
hooks/postsync.d/: 90-portage-release-watch
scripts/: install-system.sh
src/portage_release_watch/: __init__.py  cli.py  config.py  http.py  install.py  models.py  notify.py  overlay.py  report.py  sources.py  versioning.py
tests/: helpers.py  test_cli.py  test_config.py  test_http.py  test_install.py  test_overlay.py  test_report.py  test_sources.py  test_versioning.py
tests/fixtures/overlay/app-emulation/qemu/: metadata.xml  qemu-11.0.1.ebuild  qemu-9999.ebuild
tests/fixtures/overlay/app-misc/fastfetch/: fastfetch-2.65.1.ebuild
tests/fixtures/overlay/media-video/davinci-resolve/: davinci-resolve-21.0.1.ebuild
tests/fixtures/overlay/profiles/: repo_name
tests/fixtures/overlay/www-client/firefox-nightly-bin/: firefox-nightly-bin-9999.ebuild
tests/fixtures/state/: latest-notice.txt  latest-report.json
